--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.452.0",
-    "next": "14.2.15",
+    "next": "^14.2.28",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4"
@@ -22,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
